fix(styles): add padding-top to navbar for consistent spacing

--- a/frontend/scss/components/_header.scss
+++ b/frontend/scss/components/_header.scss
@@ -4,6 +4,7 @@
 .navbar {
   height: variables.$navbar-height;
   padding-bottom: variables.$body-y-axis-padding;
+  padding-top: variables.$body-y-axis-padding;
   box-sizing: content-box;
   display: flex;
   justify-content: center;
